k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pesa-analyser
  labels:
    name: pesa-analyser
    environment: production
